# assembler

./: Cargo.toml  LICENSE  README.md  flake.nix  justfile
.github/workflows/: rust.yml
assembler/: Cargo.toml  control.lua  index.html  info.json  package.json  pnpm-lock.yaml  vite.config.ts
assembler/src/: App.tsx  main.rs  prototype-api.json  runtime-api.json
assembler/src-tauri/: Cargo.toml  tauri.conf.json
assembler/src-tauri/icons/: icon.icns
assembler/src-tauri/src/: main.rs
assembler_cli/: Cargo.toml
assembler_cli/src/: cli.rs  ipc.rs  lua_mod.rs  main.rs
assembler_cli/src/commands/: mod.rs  package.rs  start.rs
assembler_cli/src/ipc/: handshake.rs  mod.rs  process.rs  schema.rs
assembler_cli/src/ipc/routes/: handshake.rs  mod.rs  observation.rs
assembler_core/: Cargo.toml
assembler_core/src/models/: force.rs  mod.rs  observation.rs
cli/: Cargo.toml
cli/src/: cli.rs  errors.rs  io.rs  main.rs
factorio-api/: Cargo.toml  build.rs
factorio-api/src/: lib.rs
lib/assembler-types/: Cargo.toml
lib/assembler-types/src/: changelog.rs  info.rs  lib.rs
lib/assembler-types/src/info/: factorio_version.rs  mod_dependency.rs  mod_version.rs
mod/: Assembler.toml  bridge.lua  config.lua  control.lua  info.json  ipc.lua  observation.lua
mod/routes/: handshake.lua  router.lua
src/: main.rs
