[workspace]
resolver = "3"
members = ["assembler","library/assembler-codegen", "library/assembler-schema"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
module_inception = "allow"

[workspace.dependencies]
assembler-schema = { path = "./library/assembler-schema" }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
