[workspace]
resolver = "3"
members = ["assembler", "library/assembler-schema"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
module_inception = "allow"
doc_markdown = "allow"

[workspace.dependencies]
assembler-schema = { path = "./library/assembler-schema" }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"
