[package]
name = "assembler_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
assembler_core = {workspace = true}
tokio = { version = "1.46.1", features = ["full"] }
owo-colors = "4.2.2"
libdeflater = "1.24.0"
