[package]
name = "assembler"
version = "0.1.0"
description = "A Factorio mod creation and packing tool"
authors = ["you"]
edition = "2021"

[lib]
name = "assembler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
